--- a/addons/addon-custom-cfn/ec2-windows.yaml
+++ b/addons/addon-custom-cfn/ec2-windows.yaml
@@ -391,8 +391,14 @@ Resources:
           Invoke-WebRequest https://cran.r-project.org/bin/windows/Rtools/rtools40v2-x86_64.exe -OutFile c:\Users\Administrator\rtools40v2-x86_64.exe
           Invoke-WebRequest https://sfc-repo.snowflakecomputing.com/odbc/win64/latest/snowflake64_odbc-2.24.0.msi -OutFile c:\Users\Administrator\snowflake64_odbc-2.24.0.msi
           c:\Users\Administrator\R-4.1.1-win.exe /verysilent
+          Start-Sleep -Seconds 30
           c:\Users\Administrator\RStudio-1.4.1717.exe /S
+          Start-Sleep -Seconds 30
           c:\Users\Administrator\rtools40v2-x86_64.exe /verysilent
+          Start-Sleep -Seconds 30
+          c:\Users\Administrator\snowflake64_odbc-2.24.0.msi /quiet
+          Start-Sleep -Seconds 30
+          New-Item -ItemType SymbolicLink -Path C:\Users\Administrator\Desktop\ -Name "RStudio.lnk" -Value "C:\Program Files\RStudio\bin\rstudio.exe"
 
           cfn-signal.exe -e $lastexitcode --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}
           </powershell>
