--- a/addons/addon-custom-cfn/ec2-windows.yaml
+++ b/addons/addon-custom-cfn/ec2-windows.yaml
@@ -384,6 +384,18 @@ Resources:
           # Source the script to start the s3 synchronizer process
           ."C:\workdir\start-s3-synchronizer.ps1"
 
+          #create script to download qualys agent
+          $downloadQualysAgent = @'
+          $uri = [System.Uri]"${EnvironmentInstanceFiles}"
+          $key = "$($uri.AbsolutePath.Substring(1))/bin/QualysCloudAgent.exe"
+          Read-S3Object -BucketName $uri.Host -Key $key -File QualysCloudAgent.exe
+          '@
+          Set-Content -Path C:\workdir\QualysCloudAgentDownload.ps1 -Value $downloadQualysAgent
+
+          ."C:\workdir\QualysCloudAgentDownload.ps1"
+
+          cmd /c "c:\workdir\QualysCloudAgent.exe CustomerId={b288187c-6e29-d330-8389-5b291af9e73f} ActivationId={75beca74-1e31-49b0-a353-cb176a99d0ef} WebServiceUri=https://qagpublic.qg1.apps.qualys.com/CloudAgent/"
+          Start-Sleep -Seconds 5
           # Download and install r, rstudio, rtools, and ODBC connector as well as create shortcuts
           [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
           Invoke-WebRequest https://cran.r-project.org/bin/windows/base/R-4.1.1-win.exe -OutFile c:\Users\Administrator\R-4.1.1-win.exe
@@ -391,13 +403,13 @@ Resources:
           Invoke-WebRequest https://cran.r-project.org/bin/windows/Rtools/rtools40v2-x86_64.exe -OutFile c:\Users\Administrator\rtools40v2-x86_64.exe
           Invoke-WebRequest https://sfc-repo.snowflakecomputing.com/odbc/win64/latest/snowflake64_odbc-2.24.0.msi -OutFile c:\Users\Administrator\snowflake64_odbc-2.24.0.msi
           c:\Users\Administrator\R-4.1.1-win.exe /verysilent
-          Start-Sleep -Seconds 30
+          Start-Sleep -Seconds 5
           c:\Users\Administrator\RStudio-1.4.1717.exe /S
-          Start-Sleep -Seconds 30
+          Start-Sleep -Seconds 5
           c:\Users\Administrator\rtools40v2-x86_64.exe /verysilent
-          Start-Sleep -Seconds 30
+          Start-Sleep -Seconds 5
           c:\Users\Administrator\snowflake64_odbc-2.24.0.msi /quiet
-          Start-Sleep -Seconds 30
+          Start-Sleep -Seconds 5
           New-Item -ItemType SymbolicLink -Path C:\Users\Administrator\Desktop\ -Name "RStudio.lnk" -Value "C:\Program Files\RStudio\bin\rstudio.exe"
 
           cfn-signal.exe -e $lastexitcode --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}
