--- a/addons/addon-custom-cfn/ec2-linux.yaml
+++ b/addons/addon-custom-cfn/ec2-linux.yaml
@@ -200,6 +200,24 @@ Resources:
           # Signal result to CloudFormation
           /opt/aws/bin/cfn-signal -e $? --stack "${AWS::StackName}" --resource "EC2Instance" --region "${AWS::Region}"
 
+  IdleCPUAlarm:
+    Type: 'AWS::CloudWatch::Alarm'
+    Properties:
+        AlarmActions: 
+        - !Join ['', ['arn:aws:swf:', !Ref AWS::Region, '::action/actions/AWS_EC2.InstanceId.Stop/1.0']]
+        MetricName: CPUUtilization
+        Namespace: AWS/EC2
+        Statistic: Average
+        Period: '900' # 900 seconds is 15 minutes
+        EvaluationPeriods: '4' # 4 periods, or 1 hour total
+        DatapointsToAlarm: '4' # Need all 4 consecutively
+        Threshold: '10' # 10% is the CPU threshold
+        ComparisonOperator: LessThanThreshold
+        Dimensions:
+        - Name: InstanceId
+          Value: !Ref EC2Instance
+        TreatMissingData:  'missing'
+
 Outputs:
   Ec2WorkspaceDnsName:
     Description: Public DNS name of the EC2 workspace instance
