--- a/addons/addon-custom-cfn/ec2-windows.yaml
+++ b/addons/addon-custom-cfn/ec2-windows.yaml
@@ -112,7 +112,8 @@ Resources:
             Action:
               - "sts:AssumeRole"
       ManagedPolicyArns:
-        ["arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"]
+        ["arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore",
+        "arn:aws:iam::aws:policy/AmazonSSMPatchAssociation"]
       Policies:
         - !If
           - IamPolicyEmpty
